# neatcoder

./: .gitignore  Cargo.toml  LICENSE.md  README.md  chatStream2.tsx  quil.tsx
client/: .gitignore  CHANGELOG.md  DEVELOP.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: appStateManager.ts  extension.ts  httpClient.ts  logger.ts  statusBar.ts  utils.ts
client/src/chat/: chat.ts  chatProvider.ts  chatTree.ts
client/src/commands/: addApi.ts  addDatastore.ts  addInterfaceFiles.ts  addLanguage.ts  initCodeBase.ts  removeAllJobs.ts  removeAllTasks.ts  removeInterface.ts  removeJob.ts  removeSchema.ts  removeTask.ts  runTask.ts  startJob.ts  startPrompt.ts  streamCode.ts
client/src/handlers/: createFile.ts
client/src/models/: mappings.ts  task.ts
client/src/providers/: interfaceItem.ts  interfaces.ts  taskPool.ts  tasksCompleted.ts
client/src/watchers/: chatWatcher.ts  configWatcher.ts  schemaWatcher.ts  sourceWatcher.ts
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  utils.rs
crates/code-builder/: Cargo.toml
crates/code-builder/src/: conf.rs  crates.rs  fs.rs  lib.rs  main.rs  prelude.rs  response.json  schema.rs  specs.rs  state.rs  tcp_socket.rs  utils.rs  workflows.rs
crates/code-builder/src/endpoints/: add_interface.rs  add_schema.rs  add_src_file.rs  execution_plan.rs  init_prompt.rs  init_state.rs  init_work.rs  mod.rs  remove_interface.rs  remove_schema.rs  remove_src_file.rs  scaffold_project.rs  set_dot_neat.rs  start_job.rs  stream_code.rs  update_scaffold.rs  worker.rs
crates/code-builder/src/endpoints/manager/: add_schema.rs  init_prompt.rs  mod.rs
crates/code-builder/src/jobs/: commit.rs  job.rs  job_queue.rs  mod.rs
crates/code-builder/src/models/: code_stream.rs  commit.rs  fs.rs  interface.rs  job.rs  job_queue.rs  job_worker.rs  jobs.rs  mod.rs  shutdown.rs  state.rs  task.rs  task_params.rs  task_pool.rs  types.rs  worker.rs
crates/code-builder/src/models/interfaces/: apis.rs  dbs.rs  mod.rs  schemas.rs  storage.rs
crates/code-builder/src/models/jobs/: job.rs  jobs.rs  mod.rs
crates/code-builder/src/models/messages/: client.rs  inner.rs  manager.rs  mod.rs  outer.rs  server.rs  worker.rs
crates/code-builder/src/openai/: client.rs  params.rs  utils.rs
crates/code-builder/src/to_deprecate/: gen_api.rs  gen_api_specs.rs  gen_data_model.rs  schema.rs  workflows.rs
crates/code-builder/src/workflows/: generate_api.rs  generate_api_specs.rs  generate_db_schema.rs  genesis.rs  mod.rs
crates/gluon/: Cargo.toml
crates/gluon/src/: err.rs  lib.rs  trait_interface.rs  traits.rs
crates/gluon/src/ai/huggingface/: client.rs  job.rs  mod.rs  model.rs  output.rs
crates/gluon/src/ai/openai/: client.rs  input.rs  job.rs  mod.rs  model.rs  msg.rs  output.rs  params.rs
crates/gluon/src/input/: mod.rs  prompt_builder.rs  prompts.rs
crates/gluon/src/output/: tasks.rs
crates/gluon/src/serde/: csv.rs  html.rs  json.rs  mod.rs  python.rs  rust.rs  sql.rs  yaml.rs
crates/gluon/src/utils/: ast.rs  bounded_float.rs  mod.rs
crates/gluon/src/workflows/: generate_api.rs  generate_api_specs.rs  generate_db_schema.rs  generative_tree.rs  knowledge_graph.rs  mod.rs
crates/gpt-maker/: Cargo.toml
crates/gpt-maker/src/: cli.rs  deref.rs  get_refs.rs  io.rs  main.rs  preprocess.rs  process.rs  ref_map.rs  utils.rs
crates/llm-store/: Cargo.toml
crates/llm-store/src/: chain.rs  commit.rs  job.rs  lib.rs  msg.rs  msg_node.rs
crates/neatcoder/: Cargo.toml
crates/neatcoder/src/: consts.rs  lib.rs  prelude.rs  typescript.rs  utils.rs
crates/neatcoder/src/endpoints/: execution_plan.rs  get_chat_title.rs  mod.rs  scaffold_project.rs  stream_code.rs
crates/neatcoder/src/models/: chat.rs  language.rs  mod.rs  state.rs  task.rs  task_params.rs  task_pool.rs
crates/neatcoder/src/models/app_data/: language.rs  mod.rs
crates/neatcoder/src/models/app_data/interfaces/: apis.rs  dbs.rs  mod.rs  storage.rs
crates/neatcoder/src/models/app_data/task_pool/: mod.rs  task.rs  task_params.rs
crates/neatcoder/src/models/interfaces/: apis.rs  dbs.rs  mod.rs  storage.rs
crates/neatcoder/src/openai/: client.rs  mod.rs  msg.rs  params.rs  request.rs  response.rs  utils.rs
crates/neatcoder/src/openai/assistant/: assistant.rs
crates/oai/: Cargo.toml
crates/oai/src/: consts.rs  http.rs  lib.rs
crates/oai/src/models/: message.rs  mod.rs  model.rs  role.rs
crates/oai/src/models/assistant/: assistant.rs  file.rs  message.rs  mod.rs  run.rs  thread.rs
crates/oai/src/models/chat/: mod.rs  params.rs  request.rs  response.rs
crates/parser/: Cargo.toml
crates/parser/src/: err.rs  lib.rs
crates/parser/src/parser/: csv.rs  html.rs  json.rs  mod.rs  python.rs  rust.rs  sql.rs  yaml.rs
crates/subcrates/gluon-derive/: Cargo.toml
crates/subcrates/gluon-traits/: Cargo.toml
crates/wasmer/: Cargo.toml
crates/wasmer/src/: lib.rs
examples/: specs.yaml
examples/db/: playlist_songs.sql  songs.sql  user_songs.sql
examples/models/sonify/: albums.sql  playlists.sql  users.sql
examples/models/tech_trek/: order_item.sql  product.sql
examples/models/zenith_tech/: order.sql
examples/projects/sonify/: 1.txt
examples/projects/tech_trek/: 2.txt
prompts/: search.txt
src/: lib.rs  main.rs  utils.rs
src/ai/openai/: client.rs  input.rs  output.rs
src/input/: instruction.rs  prompt_builder.rs
src/llms/: openai.rs
src/migrations/: 0001.sql
src/output/: mod.rs  tasks.rs
src/utils/: mod.rs  tasks.rs
src/workflows/: generative_tree.rs  mod.rs
vsce/: .gitignore  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json
vsce/src/: appStateManager.ts  extension.ts  httpClient.ts  utils.ts
vscode/: launch.json  tasks.json
webview/: README.md  package-lock.json  package.json  tsconfig.json
webview/public/: index.html
webview/src/: App.tsx  chatContainer.tsx  chatStream.tsx  config.ts  httpClient.tsx  index.css  index.tsx  mixpanel-webview-helper.ts  react-app-env.d.ts  sendButton.tsx  textBox.tsx  vscode.d.ts  vscode.tsx
webview/wasm/: neatcoderInterface.d.ts
(+107 files in other folders)
