[package]
name = "code-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon = { path = "../gluon" }
parser = { path = "../parser" }

# futures = "0.3"
anyhow = "1.0"
async-recursion = "1.0.4"
bincode = "1.3.3"
byteorder = "1.4"
bytes = "1.4.0"
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.28"
heck = "0.4"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlparser = "0.36"
tokio = { version = "1.29", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
