[package]
name = "gluon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "default"
path = "src/bin/default.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-store = { path = "../llm-store" }

anyhow = "1.0"
thiserror = "1.0"
csv = "1.2"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = {version = "1.29", features = ["full"]}
