[package]
name = "gluon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "default"
path = "src/bin/default.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-store = { path = "../llm-store" }

anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"]}
tokio = {version = "1.29", features = ["full"]}

# Parsing
csv = "1.2"
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
syn = "2.0"
rustpython-parser = "0.2.0"
