[package]
name = "gluon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "default"
path = "src/bin/default.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "stream"]}
tokio = {version = "1.29", features = ["full"]}
futures = "0.3"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
