[package]
name = "gpt-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8",  features = ["derive"]}
console = "0.15.7"
dialoguer = "0.11.0"
dirs = "5.0.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
oai = { path = "../oai" }
dotenv = "0.15.0"
openapiv3 = { version = "1.0.3" }
indexmap = "1.9.3"
