[package]
name = "neatcoder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }

anyhow = "1.0"
bytes = "1.4.0"
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.28"
log = "0.4"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5"
web-sys = { version = "0.3", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
