[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
csv-parser = ["csv"]
html-parser = ["scraper"]
rust-parser = ["syn"]
python-parser = ["rustpython-parser"]
sql-parser = ["sqlparser"]
full = ["csv-parser", "html-parser", "python-parser", "rust-parser", "sql-parser"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

csv = { version = "1.2", optional = true }
scraper = { version = "0.17", optional = true }
syn = { version = "2.0", optional = true }
rustpython-parser = { version = "0.2.0", optional = true }
sqlparser = { version = "0.36", optional = true }
