[package]
name = "wasmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4.37" }
serde-wasm-bindgen = { version = "0.5.0" }
web-sys = { version = "0.3", features = ['console'] }
chrono = {version = "0.4", features = ["serde"]}
